# flask-imap-passwd

./: .cpanel.yml  AGENTS.md  CLAUDE.md  VERSIONING.md  config_messages.py  credentials.txt  credentials_backup.txt  mail.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  version-check.yml
static/css/: main.css
static/js/: form.js
templates/: 404.html  500.html  base.html  confirmation.html  credentials.html  faq.html  getpasswd.html  gettoken.html  invalid.html  passwd.html  reqtoken.html  testpage.html
