[project]
name = "flask-imap-passwd"
version = "0.2.0"
description = "Flask IMAP password reset application"
requires-python = ">=3.8"
dependencies = [
    "Flask>=1.1.2",
    "WTForms>=2.3.3",
    "cryptography>=3.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
